tests/NormalTests/paczka1/small_fuzzy/21904468.err
Error in line 6: pw7qW1n=wM S635 37,2
Error in line 8: drizwk4vrWU S635 36,4
Error in line 13: Tvs5V8Dbv S220 94,8
